# snakes_in_a_hurry

./: README.md  params.pickle  pyproject.toml
snakes_in_a_hurry/: game.py  test_mem_usage.py  train.py
